XMLExper/m12/m12_67_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:770:108: error: lvalue required as left operand of assignment
  770 |             /*PCI*/dynamic_cast<tinyxml2::XMLDocument*>(returnNode) = CreateUnlinkedNode<XMLText>(_textPool);
      |                                                                                                            ^
diff: tinyxml2.o: No such file or directory
